test/conformance/chainsaw/imageverificationpolicies/autogen/exceptions/bad-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-bad-deployment-1
  labels:
    prod: "true"
    app: bad-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      prod: "true"
      app: bad-nginx
  template:
    metadata:
      labels:
        prod: "true"
        app: bad-nginx
    spec:
      containers:
      - name: nginx
        image: ghcr.io/kyverno/test-verify-image:unsigned
        securityContext:
          allowPrivilegeEscalation: false
