test/conformance/chainsaw/imageverificationpolicies/autogen/exceptions/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: check-name
spec:
  policyRefs:
    - name: ivpol-sample-autogen-exceptions
      kind: ImageValidatingPolicy
  matchConditions:
    - name: "check-name"
      expression: "object.metadata.labels.app == 'skipped-deployment'"
