test/conformance/chainsaw/imageverificationpolicies/autogen/exceptions/skipped-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skipped-deployment
  labels:
    prod: "true"
    app: skipped-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      prod: "true"
      app: skipped-deployment
  template:
    metadata:
      labels:
        prod: "true"
        app: skipped-deployment
    spec:
      containers:
      - name: nginx
        image: ghcr.io/kyverno/test-verify-image:unsigned
        securityContext:
          allowPrivilegeEscalation: false
